# rofi-emoji

./: .gitignore  Changelog.md  LICENSE  Makefile.am  README.md  all_emojis.txt  clipboard-adapter.sh  configure.ac  run-development.sh  shell.nix
src/: actions.c  actions.h  emoji.c  emoji.h  emoji_list.c  emoji_list.h  formatter.c  formatter.h  loader.c  loader.h  menu.c  menu.h  plugin.c  plugin.h  search.c  search.h  utils.c  utils.h
src/tests/: foo.c
tests/: check_emoji.c  check_loader.c  check_utils.c
